# CLIos

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv
components/BLE/: CMakeLists.txt  ble_ble.c
components/BLE/include/: ble_ble.h
components/COM/: CMakeLists.txt  com_can.c  com_i2c.c  com_i2s.c  com_rmt.c  com_spi.c  com_uart.c
components/COM/include/: com_can.h  com_i2c.h  com_i2s.h  com_rmt.h  com_spi.h  com_uart.h
components/FOS/: CMakeLists.txt  fos_mutex.c  fos_queue.c  fos_semaphore.c  fos_task.c
components/FOS/include/: fos_queue.h  fos_task.h
components/HDW/: CMakeLists.txt  hdw_adc.c  hdw_dac.c  hdw_gpio.c  hdw_pwm.c
components/HDW/include/: hdw_adc.h  hdw_dac.h  hdw_gpio.h  hdw_pwm.h
components/NET/: CMakeLists.txt  net_http.c  net_httpd.c  net_mdns.c  net_net.c  net_socket.c  net_tls.c  net_websocket.c  net_wifi.c
components/NET/include/: net_http.h  net_httpd.h  net_mdns.h  net_net.h  net_socket.h  net_tls.h  net_websocket.h  net_wifi.h
components/SYS/: CMakeLists.txt  sys_littlefs.c  sys_os.c
components/global/: CMakeLists.txt  global.h
main/: CMakeLists.txt  Core_Level.c  global.h  gpio.c  gpio.h  idf_component.yml  init.c  init.h  littlefs.c  littlefs.h  mutex.c  mutex.h  os.c  os.h  queue.c  semaphore.c  semaphore.h  task.c  task.h  wifi.c  wifi.h
