idf_component_register(SRCS "Core_Level.c"
                            "gpio.h" "gpio.c"
                            "littlefs.c" "littlefs.h"
                            "os.h" "os.c"
                            "task.h" "task.c"
                            "queue.h" "queue.c"
                            "mutex.h" "mutex.c"
                            "semaphore.h" "semaphore.c"
                            "wifi.h" "wifi.c"
                        INCLUDE_DIRS ".")

                
